--- a/_posts/2025-07-08-setup-k3s.md
+++ b/_posts/2025-07-08-setup-k3s.md
@@ -1,14 +1,29 @@
 ---
 layout: post
-title: "Setting up a K3s cluster on a Mini-PC"
+title: "Building a Homelab: My First K3s Cluster on a Mini-PC"
 date: 2025-07-08
+tags: [k3s, kubernetes, homelab, proxmox, self-hosting]
 ---
 
-Currently I'm working on setting up a K3s cluster to learn some Kubernetes and maybe selfhost some services.
+I've recently embarked on a new project: building a K3s cluster to learn Kubernetes from the ground up and to begin self-hosting various services. This post documents the initial setup and my progress so far.
 
-* Mini-PC Intel N100, 16GB RAM
-* Proxmox
-* 3 Ubuntu Server VM
-* 3 K3s Server Nodes
+### The Hardware and Virtualization Stack
 
-While I feel the hardware would be more suitable for a standalone setup, it's working so far. If you're interested, you can find some shell scripts and yaml files in my [K3s Repository](https://github.com/benjamin-aicheler/k3s). There are still some issues I'm working out, though.
+To keep the physical footprint and power consumption low, I opted for a single, efficient Mini-PC as the foundation for the entire cluster.
+
+*   **Host Machine:** Mini-PC with an Intel N100 CPU and 16GB of RAM
+*   **Hypervisor:** Proxmox
+*   **Virtual Machines:** 3 nodes running Ubuntu Server
+*   **Kubernetes:** A 3-node K3s server cluster
+
+While running a multi-node cluster on a single physical machine isn't ideal, it's a fantastic and cost-effective setup for a learning environment.
+
+### Progress and Source Code
+
+The cluster is up and running, and I've started documenting the process. You can find the shell scripts for provisioning and the Kubernetes YAML manifests I'm developing in my [K3s GitHub Repository](https://github.com/benjamin-aicheler/k3s).
+
+### Next Steps
+
+The project is still evolving. My immediate goals are to stabilize the setup and begin deploying my first applications. I'll be sharing updates as I work through challenges and reach new milestones.
+
+edited by Gemini
