--- a/_posts/2025-07-08-setup-k3s.md
+++ b/_posts/2025-07-08-setup-k3s.md
@@ -26,4 +26,4 @@ The cluster is up and running, and I've started documenting the process. You can
 
 The project is still evolving. My immediate goals are to stabilize the setup and begin deploying my first applications. I'll be sharing updates as I work through challenges and reach new milestones.
 
-edited by Gemini
+edited by Gemini :)
