--- a/_posts/2025-07-08-setup-k3s.md
+++ b/_posts/2025-07-08-setup-k3s.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: post2
 title: "Building a Homelab: My First K3s Cluster on a Mini-PC"
 date: 2025-07-08
 tags: [k3s, kubernetes, homelab, proxmox, self-hosting]
