--- a/_posts/2025-10-25-n8n.md
+++ b/_posts/2025-10-25-n8n.md
@@ -1,6 +1,6 @@
 ---
 layout: post2
-title: "My Homelab Evolves: Automating Workflows with n8n"
+title: "My Homelab Evolves++: Automating Workflows with n8n"
 date: 2025-10-25
 tags: [k3s, kubernetes, homelab, self-hosting, n8n, automation, workflow]
 ---
